--- a/src/Uptrace.OpenTelemetry/Uptrace.OpenTelemetry.csproj
+++ b/src/Uptrace.OpenTelemetry/Uptrace.OpenTelemetry.csproj
@@ -12,7 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.2.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.3.0-beta.1" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol.Logs" Version="1.0.0-rc9.3" />
   </ItemGroup>
 
 </Project>
